# kineticio

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: Findisal.cmake  Findkinetic-c++.cmake
include/: BackgroundOperationHandler.hh  ClusterChunk.hh  ClusterChunkCache.hh  ClusterInterface.hh  ClusterMap.hh  ClusterOperation.hh  DataBlock.hh  DataCache.hh  DestructionMutex.hh  ErasureCoding.hh  FileAttr.hh  FileIo.hh  KineticAdminCluster.hh  KineticAsyncOperation.hh  KineticAutoConnection.hh  KineticCallbacks.hh  KineticCluster.hh  KineticClusterOperation.hh  KineticClusterStripeOperation.hh  KineticIoSingleton.hh  KineticSingletonCluster.hh  LRUCache.hh  Logging.hh  PathUtil.hh  PrefetchOracle.hh  RedundancyProvider.hh  SequencePatternRecognition.hh  SocketListener.hh  StripeOperation.hh  Utility.hh
include/kio/: AdminClusterInterface.hh  ClusterChunk.hh  Factory.hh  FileAttrInterface.hh  FileIoInterface.hh  IoFactory.hh  KineticChunk.hh  KineticClusterInterface.hh  KineticException.hh  KineticFileAttr.hh  KineticFileIo.hh  KineticIoFactory.hh  LoggingException.hh
src/: BackgroundOperationHandler.cc  ClusterChunk.cc  ClusterChunkCache.cc  ClusterMap.cc  ClusterOperation.cc  DataBlock.cc  DataCache.cc  ErasureCoding.cc  ErasureEncoding.cc  ErasureEncoding.hh  Factory.cc  FileAttr.cc  FileIo.cc  IoFactory.cc  KineticAdminCluster.cc  KineticAsyncOperation.cc  KineticAsyncOperation.hh  KineticAutoConnection.cc  KineticCallbacks.cc  KineticChunk.cc  KineticCluster.cc  KineticCluster.hh  KineticClusterMap.cc  KineticClusterMap.hh  KineticClusterOperation.cc  KineticClusterStripeOperation.cc  KineticFileAttr.cc  KineticFileIo.cc  KineticIoFactory.cc  KineticIoSingleton.cc  KineticSingletonCluster.cc  KineticSingletonCluster.hh  PathUtil.hh  PrefetchOracle.cc  RateLimitKineticConnection.cc  RateLimitKineticConnection.hh  RedundancyProvider.cc  SequencePatternRecognition.cc  SocketListener.cc  StripeOperation.cc  (+1 more)
src/outside/: crc32c.c
test/: ClusterChunkCacheTest.cc  ClusterChunkTest.cc  ClusterMapTest.cc  ConcurrencyAppendTest.cc  ConcurrencyTest.cc  DataBlockTest.cc  DataCacheTest.cc  DynamicLibraryLoadingTest.cc  ErasureCodingTest.cc  ErasureEncdodingTest.cc  FileIoTest.cc  KineticAdminClusterTest.cc  KineticAutoConnectionTest.cc  KineticChunkTest.cc  KineticClusterMapTest.cc  KineticClusterTest.cc  KineticIoTest.cc  KineticRepairClusterTest.cc  KineticTestMain.cc  LRUCacheTest.cc  LoggingTest.cc  PrefetchOracleTest.cc  RedundancyProviderTest.cc  SequencePatternRecognitionTest.cc  SimulatorController.cc  SimulatorController.h  SocketListenerTest.cc  TestMain.cc  UtilityTest.cc  localhost.json  replay.cc
tools/: admin.cc  main.cc  root.pattern
